Resolvendo contraste

--- a/TrabalhoDeWeb/OperacaoNatal/src/components/Login/Login.module.css
+++ b/TrabalhoDeWeb/OperacaoNatal/src/components/Login/Login.module.css
@@ -32,7 +32,7 @@
 }
 
 .evento {
-  background-color: #fff;
+  background-color: var(--corFundo);
   border-radius: 0.5%;
 }
 
