--- a/TrabalhoDeWeb/OperacaoNatal/src/components/home/home.module.css
+++ b/TrabalhoDeWeb/OperacaoNatal/src/components/home/home.module.css
@@ -22,13 +22,11 @@
 
 .evento{
     display: flex;
-    background-color: #fff;
+    background-color: var(--corFundo);
     border-radius: 10px;
     flex-direction: column;
     justify-content: center;
-
 }
-
 .evento p{
     margin: 20px;
 }
@@ -49,6 +47,11 @@
     justify-content: space-between;
     margin-inline: 2rem;
     padding: 1rem;
+}
+
+.evento ul {
+    padding-inline-start: 0;
+    margin-inline: 20px;
 }
 
 .evento ul li{
@@ -75,8 +78,4 @@
     font-size: 1.5rem;
     border-radius: 10px;
     background: #FFC05A;
-}
-
-.intro {
-    
 }
