--- a/TrabalhoDeWeb/OperacaoNatal/src/components/informacoes/informacoes.module.css
+++ b/TrabalhoDeWeb/OperacaoNatal/src/components/informacoes/informacoes.module.css
@@ -20,7 +20,7 @@
 
 .evento {
     display: flex;
-    background-color: #fff;
+    background-color: var(--corFundo);
     border-radius: 10px;
     padding: 1rem;
     margin-top: 20px; /* Default margin-top */
